--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,10 @@
       content="Web site created using create-react-app"
     />
 
-    <title>M.E Portfolio</title>
+    <title>Mounir El-Abbas</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
- 
   </body>
 </html>
