--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
     <title>Mounir El-Abbas</title>
   </head>
-  <body class="dark" id="bodyTag">
+  <body class="light" id="bodyTag">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
